--- a/html/careers.html
+++ b/html/careers.html
@@ -334,7 +334,7 @@
         event.preventDefault();
 
         const templateParams = {
-            to: 'saveearthdev@gmail.com',
+            to: 'smartcode2414@gmail.com',
             subject: "Apply",
             name: document.getElementById('apply-name').value,
             email: document.getElementById('apply-email').value,
