--- a/html/careers.html
+++ b/html/careers.html
@@ -347,6 +347,7 @@
 
         emailjs.send('service_l3gukc9', 'template_nrx60j6', templateParams)
             .then(function (response) {
+                applyModal.style.display = "none";
                 console.log('SUCCESS!', response.status, response.text);
                 alert('Email sent successfully!');
             }, function (error) {
