--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
         </div>
       </div>
     </div>
+    <div class="book-success" id="book-success">
+      
+    </div>
   </div>
   <div class="home position-relative" id="home">
     <div class="semicircle position-absolute bottom-0 start-0">
