--- a/html/blog.html
+++ b/html/blog.html
@@ -124,6 +124,11 @@
         </div>
       </div>
     </div>
+    <div class="book-success hidden" id="book-success">
+      <img src="../assets/logo/success.svg" height="20" width="20" alt="">
+      <span>Sent your message successfully!</span>
+      <img class="mb-4" src="../assets/logo/close.svg" height="20" width="20" alt="">
+    </div>
   </div>
   <div class="blank"></div>
   <div style="
