--- a/html/careers.html
+++ b/html/careers.html
@@ -126,6 +126,11 @@
                 </div>
             </div>
         </div>
+        <div class="book-success hidden" id="book-success">
+            <img src="../assets/logo/success.svg" height="20" width="20" alt="">
+            <span>Sent your message successfully!</span>
+            <img class="mb-4" src="../assets/logo/close.svg" height="20" width="20" alt="">
+        </div>
     </div>
     <div class="careers-main">
         <h1 class="careers-title">Careers</h1>
