--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
         </div>
       </div>
     </div>
-    <div class="book-success" id="book-success">
-      
+    <div class="book-success hidden" id="book-success">
+      <img src="./assets/logo/success.svg" height="20" width="20" alt="">
+      <span>Sent your message successfully!</span>
+      <img class="mb-4" src="./assets/logo/close.svg" height="20" width="20" alt="">
     </div>
   </div>
   <div class="home position-relative" id="home">
