style:success alert

--- a/html/careers.html
+++ b/html/careers.html
@@ -354,7 +354,11 @@
             .then(function (response) {
                 applyModal.style.display = "none";
                 console.log('SUCCESS!', response.status, response.text);
-                alert('Email sent successfully!');
+                const alertBox = document.getElementById('book-success');
+                alertBox.classList.remove('hidden');
+                setTimeout(function () {
+                    alertBox.classList.add('hidden');
+                }, 3000);
             }, function (error) {
                 console.log('FAILED...', error);
                 alert('Email sending failed. Please try again later.');
