--- a/html/blog.html
+++ b/html/blog.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="../static/css/navbar.css" />
   <link rel="stylesheet" href="../static/css/totopbtn.css" />
   <link rel="stylesheet" href="../static/css/book-modal.css" />
-  <link rel="stylesheet" href="../static/css/slug.css" />
+  <link rel="stylesheet" href="../static/css/blog.css" />
 
 </head>
 
