--- a/html/minimize_returns.html
+++ b/html/minimize_returns.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/navbar.css">
+    <link rel="stylesheet" href="../static/css/book-modal.css">
     <link rel="stylesheet" href="../static/css/totopbtn.css" />
     <link rel="stylesheet" href="../static/css/minimize_returns.css">
 </head>
@@ -210,9 +211,9 @@
                     <div class="footer-links">
                         <p class="fw-bold">Resourse</p>
                         <a class="mt-0 mb-0" href="../html/blog.html">Blogs</a>
-                        <a class="mt-3 mb-0" href="#career">Career</a>
-                        <a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
-                        <a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
+                        <a class="mt-3 mb-0" href="../html/careers.html">Career</a>
+                        <a class="mt-3 mb-0" href="../html/service.html">Teams of Service</a>
+                        <a class="mt-3 mb-0" href="../html/policy.html">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="d-flex flex-wrap gap-5rem">
