--- a/html/blog.html
+++ b/html/blog.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body class="position-relative">
+<body class="position-relative" style=" font-family: Poppins, sans-serif;">
   <div class="navbar top-0 start-0">
     <div class="navbar-container">
       <a href="../index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
