--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="./html/blog.html">Blogs</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="../html/blog.html">Blogs</a> </li>
       </ul>
       <div class="nav-btn-container">
         <button class="nav-btn" id="open-book-modal">SEE LIVE IN ACTION</button>
